# speedpay-api

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  db.sqlite3  example.env  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: tests.yml
config/gateways/: asgi.py  wsgi.py
config/routes/: api_urls.py  urls.py
config/settings/: corsheaders.py  databases.py  rest_framework.py  settings.py  simplejwt.py  test_settings.py
scripts/: clear_migrations.bash
speedpay/: db.sqlite3
speedpay/authentication/: apps.py  permissions.py  urls.py
speedpay/core/: apps.py  pagination.py  validators.py
speedpay/users/: apps.py  models.py
speedpay/utils/: id_generator.py
speedpay/wallets/: apps.py  models.py
speedpay_auth/: apps.py  urls.py
speedpay_users/: apps.py  models.py
speedpay_users/api/: serializers.py  views.py
speedpay_users/migrations/: 0001_initial.py  0002_alter_speedpayuser_is_active_alter_speedpayuser_uuid.py  0003_alter_speedpayuser_email_alter_speedpayuser_uuid.py  0004_alter_speedpayuser_uuid.py  0005_alter_speedpayuser_uuid.py
speedpay_wallet/: apps.py  models.py
speedpay_wallet/api/: serializers.py  views.py
speedpay_wallet/migrations/: 0002_alter_speedpaywallet_wallet_uuid.py
speedpay_wallets/: apps.py  models.py
speedpay_wallets/api/: serializers.py  views.py
speedpay_wallets/migrations/: 0001_initial.py  0002_alter_speedpaywallet_wallet_uuid.py  0003_alter_speedpaywallet_balance_and_more.py
tests/spirit_core/: test_model_from_meta.py
utils/: model_extractor.py
(+27 files in other folders)
